exports[`Container > Organizations Delete Organization 1`] = `
Object {
  "payload": Object {
    "args": Array [
      "/agency/agency-3",
    ],
    "method": "push",
  },
  "type": "@@router/CALL_HISTORY_METHOD",
}
`;

exports[`Container > Organizations Organizations View loads 1`] = `
"<div class=\"container\">
  <div class=\"row\">
    <div class=\"col-xs-12\">
      <h2>
        <i class=\"fa fa-flag fa-fw \"></i><span>Mock Agency</span> </h2>
      <div class=\"btn-group\">
        <button to=\"/agency/agency-1/edit\" type=\"button\" class=\"btn btn-warning\">Edit</button>
        <button type=\"button\" class=\"btn btn-danger\">Delete</button>
      </div>
      <h3>

        <!-- react-text: 11 -->Organizations<!-- /react-text -->
        <button to=\"/agency/agency-1/organization/create\" type=\"button\" class=\"pull-right btn btn-default\"><span>Create a new organization</span> 
          <i class=\"fa fa-shield fa-fw \"></i>
        </button>
      </h3>
      <p>

        <!-- react-text: 16 -->An organization is a collection of sites<!-- /react-text -->
        <i class=\"fa fa-building fa-fw \"></i>

        <!-- react-text: 18 -->and commuters<!-- /react-text -->
        <i class=\"fa fa-users fa-fw \"></i>

        <!-- react-text: 20 -->.<!-- /react-text -->
      </p>
      <div class=\"react-bs-table-container\">
        <div class=\"react-bs-table\" style=\"height: 100%;\">
          <div class=\"react-bs-container-header table-header-wrapper\">
            <table class=\"table table-hover table-bordered\">
              <colgroup>
                <col class=\"\" style=\"display: none;\">
                  <col class=\"\">
                    <col class=\"\">
                      <col class=\"\">
                        <col class=\"\">
                          <col class=\"\">
              </colgroup>
              <thead>
                <tr>
                  <th class=\"\" data-is-only-head=\"false\" style=\"text-align: left; display: none;\" data-field=\"_id\">
                    <div></div>
                  </th>
                  <th class=\"\" data-is-only-head=\"false\" title=\"Name\" style=\"text-align: left;\" data-field=\"name\">

                    <!-- react-text: 37 -->Name<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" data-is-only-head=\"false\" title=\"Sites\" style=\"text-align: left;\" data-field=\"sites\">

                    <!-- react-text: 40 -->Sites<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" data-is-only-head=\"false\" title=\"Groups\" style=\"text-align: left;\" data-field=\"groups\">

                    <!-- react-text: 43 -->Groups<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" data-is-only-head=\"false\" title=\"Analyses\" style=\"text-align: left;\" data-field=\"analyses\">

                    <!-- react-text: 46 -->Analyses<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" data-is-only-head=\"false\" title=\"Tools\" style=\"text-align: left;\" data-field=\"undefined\">

                    <!-- react-text: 49 -->Tools<!-- /react-text -->
                    <div></div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div class=\"react-bs-container-body\" style=\"height: 100%;\">
            <table class=\"table table-bordered\">
              <colgroup>
                <col class=\"\" style=\"display: none;\">
                  <col class=\"\">
                    <col class=\"\">
                      <col class=\"\">
                        <col class=\"\">
                          <col class=\"\">
              </colgroup>
              <tbody>
                <tr class=\"\">
                  <td data-toggle=\"collapse\" colspan=\"6\" class=\"react-bs-table-no-data\">There is no data to display</td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`Container > Organizations Organizations View loads with one organization 1`] = `
"<div class=\"container\">
  <div class=\"row\">
    <div class=\"col-xs-12\">
      <h2>
        <i class=\"fa fa-flag fa-fw \"></i><span>An agency</span> </h2>
      <div class=\"btn-group\">
        <button to=\"/agency/agency-3/edit\" type=\"button\" class=\"btn btn-warning\">Edit</button>
        <button type=\"button\" class=\"btn btn-danger\">Delete</button>
      </div>
      <h3>

        <!-- react-text: 11 -->Organizations<!-- /react-text -->
        <button to=\"/agency/agency-3/organization/create\" type=\"button\" class=\"pull-right btn btn-default\"><span>Create a new organization</span> 
          <i class=\"fa fa-shield fa-fw \"></i>
        </button>
      </h3>
      <p>

        <!-- react-text: 16 -->An organization is a collection of sites<!-- /react-text -->
        <i class=\"fa fa-building fa-fw \"></i>

        <!-- react-text: 18 -->and commuters<!-- /react-text -->
        <i class=\"fa fa-users fa-fw \"></i>

        <!-- react-text: 20 -->.<!-- /react-text -->
      </p>
      <div class=\"react-bs-table-container\">
        <div class=\"react-bs-table\" style=\"height: 100%;\">
          <div class=\"react-bs-container-header table-header-wrapper\">
            <table class=\"table table-hover table-bordered\">
              <colgroup>
                <col class=\"\" style=\"display: none; min-width: NaNpx;\">
                  <col class=\"\" style=\"min-width: NaNpx;\">
                    <col class=\"\" style=\"min-width: NaNpx;\">
                      <col class=\"\" style=\"min-width: NaNpx;\">
                        <col class=\"\" style=\"min-width: NaNpx;\">
                          <col class=\"\" style=\"min-width: NaNpx;\">
              </colgroup>
              <thead>
                <tr>
                  <th class=\"\" data-is-only-head=\"false\" style=\"text-align: left; display: none;\" data-field=\"_id\">
                    <div></div>
                  </th>
                  <th class=\"\" data-is-only-head=\"false\" title=\"Name\" style=\"text-align: left;\" data-field=\"name\">

                    <!-- react-text: 37 -->Name<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" data-is-only-head=\"false\" title=\"Sites\" style=\"text-align: left;\" data-field=\"sites\">

                    <!-- react-text: 40 -->Sites<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" data-is-only-head=\"false\" title=\"Groups\" style=\"text-align: left;\" data-field=\"groups\">

                    <!-- react-text: 43 -->Groups<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" data-is-only-head=\"false\" title=\"Analyses\" style=\"text-align: left;\" data-field=\"analyses\">

                    <!-- react-text: 46 -->Analyses<!-- /react-text -->
                    <div></div>
                  </th>
                  <th class=\"\" data-is-only-head=\"false\" title=\"Tools\" style=\"text-align: left;\" data-field=\"undefined\">

                    <!-- react-text: 49 -->Tools<!-- /react-text -->
                    <div></div>
                  </th>
                </tr>
              </thead>
            </table>
          </div>
          <div class=\"react-bs-container-body\" style=\"height: 100%;\">
            <table class=\"table table-bordered\">
              <colgroup>
                <col class=\"\" style=\"display: none;\">
                  <col class=\"\">
                    <col class=\"\">
                      <col class=\"\">
                        <col class=\"\">
                          <col class=\"\">
              </colgroup>
              <tbody>
                <tr class=\"\">
                  <td class=\"\" style=\"text-align: left; display: none;\">organization-1</td>
                  <td class=\"\" style=\"text-align: left;\">
                    <a>Mock Organization</a> 
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <div>0</div>
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <div>0</div>
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <div>0</div>
                  </td>
                  <td class=\"\" style=\"text-align: left;\">
                    <div class=\"btn-group\">
                      <button to=\"/organization/organization-1/edit\" type=\"button\" class=\"btn btn-warning\">Edit</button>
                      <button type=\"button\" class=\"btn btn-danger\">Delete</button>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;
